# CppTemplates

./: .gitignore  CMakeLists.md
C++ Metaprogramming/: CMakeLists.txt
C++ Metaprogramming/Chapter2. traits和类型操纵/: 2.0.cpp  2.1.cpp  2.2.cpp  2.3.cpp  CMakeLists.txt  type_name.h
Chapter 03. Class Templates/: main.cpp
Chapter 03. Class Templates/include/: stack1.hpp  stack2.hpp  stack3.hpp
Chapter 04. Nontype Template Parameters/: main.cpp
Chapter 04. Nontype Template Parameters/include/: stack4.hpp
Chapter 05. Tricky Basics/: main.cpp
Chapter 05. Tricky Basics/include/: Stack8.hpp
Chapter 15. Trait and policy class/: main.cpp
Chapter 15. Trait and policy class/15.1 An example/: CMakeLists.txt
Chapter 15. Trait and policy class/15.1 An example/include/: accum0.h  accum5.h  accum8.h  sumpolicy1.h  sumpolicy2.h  sumpolicy3.h
Chapter 15. Trait and policy class/15.2 Type function/: elementType.cpp  isClassType.cpp
Chapter 15. Trait and policy class/15.3 Policy trait/: rparam1.cpp  rparam2.cpp
Chapter 15. Trait and policy class/include/: accum6.h  accumtraits4.h  sumpolicy1.h
Chapter 16. Template and inheritance/16.1 Named template parameters/: nametmpl.cpp
Chapter 16. Template and inheritance/16.2 Empty base optimization/: ebco1.cpp  ebco2.cpp
Chapter 16. Template and inheritance/16.3 The Curiously Recurring Template Pattern/: testCounter.cpp
Chapter 16. Template and inheritance/16.4 Parameterized Virtuality/: virtual.cpp
Chapter 17. Metaprogram/: sqrt1.cpp
Chapter 17. Metaprogram/include/: ifThenElse.h  sqrt1.h  sqrt2.h
Chapter 17. Metaprogramming/: unruh.cpp
Chapter 17. Metaprogramming/17.1 Calculate the power of 3/: pwo3.cpp
Chapter 3. Class Templates/: CMakeLists.txt  main.cpp
Chapter 3. Class Templates/include/: stack1.hpp  stack3.hpp
Chapter 4. Nontype Template Parameters/: CMakeLists.txt
Chapter 5. Tricky Basics/: CmakeLists.txt
diy/: CMakeLists.txt  heap_sort_template.1.cpp  heap_sort_template.2.cpp  heap_sort_template.cpp  quicksort_template.1.cpp  quicksort_template.cpp  quicksort_tmp.cpp
others/: heap_sort_template.cpp
(+106 files in other folders)
