CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(accum5 CXX)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/arc)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES("./include")

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)

ADD_EXECUTABLE(accum5 main.cpp)